<resources>
    <string name="app_name">Sinrek</string>
    <string name="all_languages">All Languages</string>
    <string name="logo">Logo</string>
    <string name="splash_title">आत्म निर्भर भारत!</string>
    <string name="welcome_title">Welcome to the Sinrek!</string>
    <string name="register_title">Complete Registration!</string>
    <string name="login_title">Welcome Back!</string>
    <string name="reset_title">Reset Password</string>
    <string name="made_by">Created by Hemant</string>
    <string name="login">Login</string>
    <string name="register">Create New Account</string>
    <string name="made_in">MADE IN INDIA</string>
    <string name="lbl_username">Pick a Username</string>
    <string name="lbl_password">Pick a Password</string>
    <string name="hint_password">Password</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="done">Done</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="what_s_your_otp">What\'s your OTP ?</string>
    <string name="we_send_you_a_text">(we send you a text)</string>
    <string name="search_hint">Search</string>
    <string name="no_result_found">No Result</string>
    <string name="select_country">Select county</string>
    <string name="country_name_and_code">JAG</string>
    <string name="phone_code">JAG</string>
    <string name="code">Code</string>
    <string name="phone_register_title">Enter Your Phone Number</string>
    <string name="get_code">Get Code</string>
    <string name="btn_following">Next</string>
    <string name="_continue">Continue</string>
    <string name="we_sent_you_a_6_digit_code">Nous vous avons envoyé un code à 6 chiffres.</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_">Search</string>
    <string name="phone_auth_register_title">Enter your Phone Number</string>
    <string name="phone_auth_forgot_title">Enter your Registered Number</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_activity_comment">CommentActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_comments">Comments</string>
    <string name="Search">Search</string>
    <string name="follow">Follow</string>
    <string name="requested">Requested</string>
    <string name="following">Following</string>
    <string name="unblock">Unblock</string>
    <string name="hint_username">Username</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="otp_resend">RESEND OTP</string>
    <string name="add_text">Add Text</string>
    <string name="add_video">Add Video</string>
    <string name="add_photo">Add Photo</string>
    <string name="post">Post</string>
    <string name="enter_your_text">Enter Your Text</string>
    <string name="enter_your_caption">Enter Your Caption</string>

    <string name="pix_selection_limiter">Can\'t select more than %d items.</string>
    <string name="pix_bottom_message_without_video">Drag images up for gallery</string>
    <string name="pix_bottom_message_with_only_video">Drag videos up for gallery</string>
    <string name="pix_bottom_message_with_video">Hold for video, tap for photo</string>
    <string name="pix_ok">OK</string>
    <string name="pix_tap_to_select">Tap photo to select</string>
    <string name="pix_selected">Selected</string>
    <string name="pix_recent">Recent</string>
    <string name="pix_last_month">Last Month</string>
    <string name="pix_last_week">Last Week</string>
    <string name="pix_counter_number">0:00</string>
    <!-- content descriptions -->
    <string name="click_button">click button</string>
    <string name="camera_flash_button">camera flash button</string>
    <string name="lens_facing_button">lens facing button</string>
    <string name="permission_camera_denied">Permission Denied…!!!</string>
    <string name="hint_birthday">Date Of Birth</string>
    <string name="hint_weblink">Website Link</string>
    <string name="tell_us_about_your_self">Tell us about your self</string>
    <string name="filter">FILTER</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="change_password">Change Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="save">SAVE</string>
    <string name="some_error_occurred">Some Error Occurred…!</string>
    <string name="hint_email">Email</string>
    <string name="hint_address">Address</string>
    <string name="_public">Public</string>
    <string name="_following">Following</string>
    <string name="nobody">Nobody</string>
    <string name="followers">Followers</string>
    <string name="permission_storage_denied">Storage Permission Denied</string>
    <string name="caption">Caption</string>
    <string name="report">Report</string>
    <string name="describe">Describe Your Problem</string>
    <string name="write_here">Write here…</string>
    <string name="send_report">Send Report</string>
    <string name="direct_send_report">Direct Send Report</string>
    <string name="update">Update</string>
    <string name="title_activity_video_view">VideoViewActivity</string>
    <string name="save_post">Saved Post</string>
    <string name="default_notification_channel_id">sinrek_notify_1234</string>
    <string name="folder">Folder</string>
    <string name="hint_full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="title_about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="btn_cancel">Cancel</string>
    <string name="hint_type_here">Type here</string>
    <string name="title_post_edit">Edit Post</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="bio">Bio</string>
    <string name="instagram">Put instgram link </string>
    <string name="hint_instagram_link">Type username...</string>
    <string name="twitter">Put Twitter link</string>
    <string name="hint_twitter_link">Type username...</string>
    <string name="birthday">Birthday</string>
    <string name="education">Education</string>
    <string name="link">LINK</string>
    <string name="relationship_status">RELATIONSHIP STATUS</string>
    <string name="gender">Gender</string>
    <string name="hint_country_code">+1</string>
    <string name="new_post_any_following">New post any following</string>
    <string name="like_on_my_post">Like on my post</string>
    <string name="comment_on_my_post">Comment on my post</string>
    <string name="accept_new_requests">Accept new requests</string>
    <string name="who_can_see_my_post">Who can see my post</string>
    <string name="who_can_comment_on_my_post">Who can comment on my post</string>
    <string name="who_can_share_my_post">Who can share my post</string>
    <string name="who_can_download_my_post">Who can download my post</string>
    <string name="who_can_save_my_post">Who can save my post</string>
    <string name="title_share">Share</string>
    <string name="write_a_caption">Write a caption…</string>
    <string name="who_can_see_my_profile">Who can see my profile</string>
    <string name="fake_account">Fake Account</string>
    <string name="spam">Spam</string>
    <string name="spread_false_information">Spread False Information</string>
    <string name="other">Other</string>
    <string name="sexual_content">Sexual Content</string>
    <string name="violence">Violence</string>
    <string name="hate_speech">Hate Speech</string>
    <string name="false_information">False Information</string>
    <string name="scam_fraud">Scam/Fraud</string>
    <string name="child_abuse">Child Abuse</string>
    <string name="or">OR</string>
    <string name="online_status">Online Status</string>
    <string name="reset_to_default_settings">Reset To Default Settings</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="about">About</string>
    <string name="notification">Notification</string>
    <string name="profile_privacy">Profile Privacy</string>
    <string name="activities">Activities</string>
    <string name="following_activity">Following Activity</string>
    <string name="requests">Requests</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="text">Text</string>
    <string name="who_can_save_post">Who can save post</string>
    <string name="who_can_like_post">Who can like post</string>
    <string name="who_can_download_post">Who can download post</string>
    <string name="like_on_post">Like on post</string>
    <string name="comment_on_post">Comment on post</string>
    <string name="new_request">New Request</string>
    <string name="accept_request">Accept Request</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="delete_account">Delete Account</string>
    <string name="reply">Reply</string>
    <string name="loading">LOADING…</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="_on">On</string>
    <string name="_off">Off</string>
    <string name="dashboard">Dashboard</string>
    <string name="view_profile">View Profile</string>
    <string name="saved">Saved</string>
    <string name="download">Download</string>
    <string name="copy_link">Copy Link</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="requeted">Requested</string>
    <string name="chat">CHAT</string>
    <string name="resizable_text_read_more">more</string>
    <string name="resizable_text_read_less">less</string>
    <string name="photos_folders">Photos</string>
    <string name="videos_folders">Videos</string>
</resources>