<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
    android:id="@+id/radioGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_12sdp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RadioButton
        android:id="@+id/rbPublic"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:layoutDirection="rtl"
        android:fontFamily="@font/muli_regular"
        android:checked="true"
        android:buttonTint="@color/black"
        android:button="@drawable/radio_button_custom"
        android:text="@string/_public"
        android:textSize="@dimen/_14ssp"/>
    <RadioButton
        android:id="@+id/rbFollowing"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:fontFamily="@font/muli_regular"
        android:layoutDirection="rtl"
        android:buttonTint="@color/black"
        android:button="@drawable/radio_button_custom"
        android:text="@string/_following"
        android:textSize="@dimen/_14ssp"/>
    <RadioButton
        android:id="@+id/rbNobody"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:fontFamily="@font/muli_regular"
        android:layoutDirection="rtl"
        android:buttonTint="@color/black"
        android:button="@drawable/radio_button_custom"
        android:text="@string/nobody"
        android:textSize="@dimen/_14ssp"/>
    <RadioButton
        android:id="@+id/rbFillowers"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:fontFamily="@font/muli_regular"
        android:layoutDirection="rtl"
        android:buttonTint="@color/black"
        android:button="@drawable/radio_button_custom"
        android:text="@string/followers"
        android:textSize="@dimen/_14ssp"/>
</RadioGroup>