<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.settings.SettingActivity">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/bg_toolbar"
            app:titleMarginStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/black"
            app:title="@string/report"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/_16sdp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/list1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/llFakeAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/fake_account"
                    android:fontFamily="@font/muli_regular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/llSpam1"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/spam"
                    android:fontFamily="@font/muli_regular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/llSpreadFalseInfo"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/muli_regular"
                    android:text="@string/spread_false_information"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/llOtherReasion"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/other"
                    android:fontFamily="@font/muli_regular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/list2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/llspam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/spam"
                    android:fontFamily="@font/muli_regular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/llSexualContent"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/sexual_content"
                    android:fontFamily="@font/muli_regular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/llViolence"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/violence"
                    android:fontFamily="@font/muli_regular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/llHateSpeech"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/hate_speech"
                    android:fontFamily="@font/muli_regular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/llFalseInfo"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/false_information"
                    android:fontFamily="@font/muli_regular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/llScam"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/scam_fraud"
                    android:fontFamily="@font/muli_regular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/llChildAbuse"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/child_abuse"
                    android:fontFamily="@font/muli_regular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/llOther"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/other"
                    android:fontFamily="@font/muli_regular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>
        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:visibility="gone"
            android:indeterminateTint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>