<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.settings.SettingActivity">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/bg_toolbar"
            app:titleMarginStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/black"
            android:fontFamily="@font/muli_bold"
            app:title="@string/describe"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_16sdp">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/til_reasion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:background="@drawable/bg_grey5"
                    android:fontFamily="@font/muli_regular"
                    android:gravity="top"
                    android:text=""
                    android:maxLength="256"
                    android:hint="@string/write_here"
                    android:inputType="textMultiLine"
                    android:minLines="6"
                    android:padding="@dimen/_16sdp"
                    android:textSize="@dimen/_12sdp" />



                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sendReport"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/_8sdp"
                    android:backgroundTint="@color/yellow"
                    android:backgroundTintMode="src_over"
                    android:text="@string/send_report"
                    android:fontFamily="@font/muli_bold"
                    android:textColor="@color/black"
                    app:cornerRadius="@dimen/_50sdp"
                    app:elevation="0dp"
                    tools:ignore="SpeakableTextPresentCheck" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:fontFamily="@font/muli_regular"
                    android:text="@string/or"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sendReportDirect"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/_8sdp"
                    android:backgroundTint="@color/video_counter_color_pix"
                    android:backgroundTintMode="src_over"
                    android:text="@string/direct_send_report"
                    android:fontFamily="@font/muli_bold"
                    app:cornerRadius="@dimen/_50sdp"
                    app:elevation="0dp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>
        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:visibility="gone"
            android:indeterminateTint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>