<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="auth"
            type="com.app.appsinrek.viewmodels.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Theme_1"
        tools:context=".intro.Register">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="8.5:10"
            app:cardElevation="@dimen/_8sdp"

            app:cardCornerRadius="@dimen/_18sdp">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_24sdp"
                app:cardElevation="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_18sdp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_username"
                        android:layout_gravity="left"
                        android:fontFamily="@font/muli_regular"
                        android:layout_marginHorizontal="@dimen/_20sdp"
                        android:textColor="@color/lbl_color"
                        android:textSize="@dimen/_10ssp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/til_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:drawableStart="@drawable/ic_baseline_person_24"
                        android:padding="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:layout_marginBottom="@dimen/_16sdp"
                        android:layout_marginHorizontal="@dimen/_16sdp"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/muli_regular"
                        android:text="@={auth.username}"
                        android:textAlignment="center"
                        android:elevation="@dimen/_2sdp"
                        android:hint="@string/hint_username"
                        android:inputType="text"
                        android:textCursorDrawable="@drawable/cursor_drawable"
                        android:background="@drawable/bg_grey" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_password"
                        android:fontFamily="@font/muli_regular"
                        android:layout_gravity="left"
                        android:layout_marginHorizontal="@dimen/_20sdp"
                        android:textColor="@color/lbl_color"
                        android:textSize="@dimen/_10ssp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/til_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:fontFamily="@font/muli_regular"
                        android:drawableStart="@drawable/ic_baseline_lock_24"
                        android:padding="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:layout_marginHorizontal="@dimen/_16sdp"
                        android:textSize="@dimen/_12sdp"
                        android:elevation="@dimen/_2sdp"
                        android:textAlignment="center"
                        android:text="@={auth.password}"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:textCursorDrawable="@drawable/cursor_drawable"
                        android:background="@drawable/bg_grey" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/mtbSignIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="@dimen/_100sdp"
                        android:layout_marginTop="@dimen/_32sdp"
                        android:paddingHorizontal="@dimen/_16sdp"
                        android:layout_marginHorizontal="@dimen/_32sdp"
                        android:background="@drawable/bg_blue"
                        android:fontFamily="@font/muli_bold"
                        android:gravity="center"
                        android:text="@string/done"
                        android:onClick="@{auth::onCheckUsername}"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        app:cornerRadius="@dimen/_20sdp"
                        app:layout_constraintVertical_bias="1"
                        app:layout_constraintWidth_percent="0.9" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>
        </FrameLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            android:fontFamily="@font/muli_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />
        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:visibility="gone"
            android:indeterminateTint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>